@@ -228,8 +228,8 @@ class PlistWriter(DumbXMLWriter):
     def writeData(self, data):
         self.beginElement("data")
         self.indentLevel -= 1
-        maxlinelength = 76 - len(self.indent.replace(b"\t", b" " * 8) *
-                                 self.indentLevel)
+        maxlinelength = max(16, 76 - len(self.indent.replace(b"\t", b" " * 8) *
+                                 self.indentLevel))
         for line in data.asBase64(maxlinelength).split(b"\n"):
             if line:
                 self.writeln(line)
